# try-evidence-dev

./: README.md  justfile  pyproject.toml
notebooks/: titanic-create-db.ipynb
try-evidence-template/.evidence/customization/: .profile.json
try-evidence-template/pages/: index.md
try-evidence-template/sources/titanic/: all_data_titanic.sql  connection.yaml  titanic.ddb.wal
try-evidence-template/sources/titanic_md/: connection.yaml
